sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:8: error: not found: value j
			echange(j,j-1)
                                ^AlgInsertionSort:9: error: not found: value j
			j=j-1
                        ^AlgInsertionSort:11: error: not found: value j
	setValeur(j,getValeur(i));
                  ^