sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {

	for(i<- 1 to getNombreValeurs()) 
	{
		while((i>0) && (!plusPetit(i-1,i)))
		{
			echange(j,j-1)
			j=j-1
		}
	setValeur(j,getValeur(i));
	}	
}
